application/deployment.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    application: myeap
  name: myeap
spec:
  replicas: 2
  selector:
    matchLabels:
      deployment: myeap
  strategy:
    blueGreen:
      activeService: myeap-active
      previewService: myeap-preview
      autoPromotionEnabled: true
      previewReplicaCount: 1
      autoPromotionSeconds: 300
      scaleDownDelaySeconds: 30
  template:
    metadata:
      labels:
        application: myeap
        deployment: myeap
      name: myeap
    spec:
      containers:
      - env:
        - name: DISABLE_EMBEDDED_JMS_BROKER
          value: "true"
        - name: ENABLE_ACCESS_LOG
          value: "true"
        - name: JGROUPS_PING_PROTOCOL
          value: dns.DNS_PING
        - name: OPENSHIFT_DNS_PING_SERVICE_NAME
          value: myeap-ping
        - name: OPENSHIFT_DNS_PING_SERVICE_PORT
          value: "8888"
        - name: JGROUPS_CLUSTER_PASSWORD
          value: password
        - name: AUTO_DEPLOY_EXPLODED
          value: "false"
        - name: ENABLE_GENERATE_DEFAULT_DATASOURCE
          value: "false"
        name: myeap
        image: image-registry.openshift-image-registry.svc:5000/myeap-dev/my-eap-webapp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8888
          name: ping
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
        startupProbe:
          failureThreshold: 27
          initialDelaySeconds: 30
          tcpSocket:
            port: 8080
        livenessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - /opt/eap/bin/livenessProbe.sh
          initialDelaySeconds: 60
        readinessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - /opt/eap/bin/readinessProbe.sh
          initialDelaySeconds: 10
      terminationGracePeriodSeconds: 75
